# bomberos-sc

./: .gitignore  AUTO_DEPLOY.md  DEPLOY.md  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml  railway.toml  render.yaml
.claude/: settings.local.json
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  pages.yml
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260529_120000_ola1_catalogos_y_domicilio.py  20260530_120000_mini_sprint_catalogos.py  20260530_180000_soft_delete_expediente.py  20260601_120000_permisos_recursos.py  20260704_120000_movimientos_estatus.py
apps/api/src/bomberos_api/: config.py  database.py  logging.py  main.py
apps/api/src/bomberos_api/core/: crud.py  deps.py  middleware.py  permisos_cache.py  scope_check.py  security.py  storage.py
apps/api/src/bomberos_api/models/: __init__.py  base.py  beneficios.py  carrera.py  catalogos.py  direccion.py  egresos.py  enums.py  equipo.py  expediente.py  funcionario.py  geografia.py  mixins.py  ops.py  org.py  permiso_recurso.py  salud.py  sys.py  usuario.py
apps/api/src/bomberos_api/routers/: admin.py  admin_catalogos.py  admin_organizacion.py  admin_parametros.py  auth.py  beneficios.py  campos_custom.py  carrera.py  catalogos.py  dashboard.py  egresos.py  equipo.py  funcionarios.py  health.py  ops.py  salud.py
apps/api/src/bomberos_api/schemas/: auth.py  beneficios.py  carrera.py  common.py  direccion.py  egresos.py  equipo.py  expediente.py  funcionario.py  ops.py  permiso_recurso.py  salud.py
apps/api/src/bomberos_api/scripts/: bootstrap.py
apps/api/tests/: test_health.py  test_security.py
apps/migration/: README.md  legacy_inspection_20260504_174805.json  pyproject.toml
apps/migration/scripts/: README.md  inspeccionar_legacy.ps1  inspeccionar_legacy.sql  inspeccionar_valores_opacos.ps1  inspeccionar_visita2.ps1
apps/migration/src/bomberos_migration/: __init__.py  __main__.py  analyze.py  config.py  io.py  migrate.py  transform.py
apps/migration/tests/: test_transform.py
apps/web/: .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
deploy/: Caddyfile  instalar-cliente.bat
docs/: AUDITORIA_2026-07-04.md  ER.md  INSTALACION_LOCAL.html  INSTALACION_LOCAL.md  MIGRACION_LEGACY_INSTRUCCIONES.md  MIGRACION_LEGACY_ONEPAGER.md  MIGRACION_LEGACY_PLAN.md  MIGRACION_LEGACY_SESION_2026-05-04.md  MIGRACION_LEGACY_VISITA2_CHECKLIST.md  PENDING.md  ROADMAP.md  SECURITY.md  TEST_REPORT.md  landing.html  schema.dbml
docs/api/: openapi.json  redoc.html
docs/superpowers/audits/: 2026-05-25-ui-audit.md
docs/superpowers/plans/: 2026-05-19-deploy-intranet.md  2026-05-19-fase-0-upgrade-stack.md  2026-05-19-frontend-modules.md  2026-05-19-migration-legacy.md  2026-05-19-security-sprint-1.md  2026-05-19-security-sprint-2.md  (+1 more)
docs/swagger/: index.html
sql/: 01_base.sql  02_dominio.sql  03_funciones_vistas.sql  04_seed.sql  05_campos_custom.sql  07_roles_por_departamento.sql  08_catalogos_ola1.sql  10_catalogos_mini_sprint.sql  11_soft_delete_expediente.sql  12_permisos_recursos.sql  13_movimientos_estatus.sql  99_run_all.sql  demo_data.sql  demo_data_clean.sql
(+224 files in other folders)
