[project]
name = "bomberos-api"
version = "0.1.0"
description = "API del Sistema Bomberos Caracas"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.15,<0.16",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bomberos_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# __table_args__ = {"schema": ...} es el idiom declarativo de SQLAlchemy,
# no un mutable default real.
"src/bomberos_api/models/*" = ["RUF012"]

[tool.ruff.lint.flake8-bugbear]
# Idiom de FastAPI: Query/Depends en defaults de parámetros.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
