[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bomberos-migration"
version = "0.1.0"
description = "Migración legacy PERSONALINTEGRADA (SQL Server) -> bomberos_caracas (PostgreSQL)"
requires-python = ">=3.11"
dependencies = [
  "pyodbc>=5.1",
  "asyncpg>=0.29",
  "click>=8.1",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
bomberos-migrate = "bomberos_migration.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/bomberos_migration"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
